# freebsd-chromium-no-dbus

./: README.md
www/chromium/: Makefile
www/chromium/files/: patch-chrome_browser_BUILD.gn  patch-chrome_browser_password__manager_password__store__factory.cc  patch-no-dbus  patch-services_device_wake__lock_power__save__blocker_BUILD.gn  patch-services_device_wake__lock_power__save__blocker_power__save__blocker__x11.cc
