--- chrome/browser/BUILD.gn.orig	2017-09-21 22:04:51.000000000 +0000
+++ chrome/browser/BUILD.gn	2017-11-24 04:05:15.678568000 +0000
@@ -2273,7 +2273,7 @@
     deps += [ "//device/udev_linux" ]
   }
 
-  if (is_linux && !is_chromeos) {
+  if ((is_linux || is_bsd) && !is_chromeos) {
     deps += [ "//third_party/speech-dispatcher" ]
   }
 
@@ -3630,7 +3630,7 @@
     }
   }
 
-  if (is_linux) {
+  if (is_linux || is_bsd) {
     if (use_aura) {
       deps += [ "//third_party/fontconfig" ]
       if (use_dbus) {
@@ -3643,7 +3643,7 @@
     }
   }
 
-  if (is_linux || is_win || is_mac) {
+  if (is_linux || is_win || is_mac || is_bsd) {
     sources += [
       "payments/chrome_payment_request_delegate.cc",
       "payments/chrome_payment_request_delegate.h",
@@ -3653,7 +3653,7 @@
     deps += [ "//components/payments/content" ]
   }
 
-  if (is_linux || is_win) {
+  if (is_linux || is_win || is_bsd) {
     sources += [
       "renderer_context_menu/spelling_options_submenu_observer.cc",
       "renderer_context_menu/spelling_options_submenu_observer.h",
@@ -3678,14 +3678,21 @@
       "first_run/upgrade_util_linux.cc",
       "first_run/upgrade_util_linux.h",
       "icon_loader_auralinux.cc",
-      "password_manager/native_backend_kwallet_x.cc",
-      "password_manager/native_backend_kwallet_x.h",
       "platform_util_linux.cc",
       "shell_integration_linux.cc",
       "shell_integration_linux.h",
       "speech/tts_linux.cc",
       "web_applications/web_app_linux.cc",
     ]
+
+    if (use_dbus) {
+      sources += [
+        "password_manager/native_backend_kwallet_x.cc",
+        "password_manager/native_backend_kwallet_x.h",
+      ]
+    } else {
+      defines = [ "KWALLET_DBUS_DUMMY" ]
+    }
 
     if (enable_native_notifications) {
       sources += [
